Fix text alignment in book card and add toggle
Read checkbox is now converted to a toggle button

--- a/style.css
+++ b/style.css
@@ -119,6 +119,17 @@ div > div {
   width: auto;
   position: relative;
   font-size: 1.5rem;
+  display: grid;
+  gap: 5px;
+  grid-template-columns: 1fr 1fr;
+}
+
+.book-card > div {
+  border: none;
+}
+
+.book-card > input[type="checkbox"] {
+  justify-self: start;
 }
 
 div > button {
@@ -157,3 +168,48 @@ div > button:active {
 }
 
 /* align text in the book card and finish up dude */
+
+/* Toggle Button */
+
+.book-card > input[type="checkbox"] {
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  position: relative;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+.book-card > input[type="checkbox"]:after {
+  content: "";
+  width: 60px;
+  height: 28px;
+  display: inline-block;
+  background: rgb(159, 159, 252);
+  border-radius: 18px;
+  clear: both;
+}
+
+/* Contents before checkbox to create toggle handle */
+.book-card > input[type="checkbox"]:before {
+  content: "";
+  width: 32px;
+  height: 32px;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: -3px;
+  border-radius: 50%;
+  background: rgb(255, 255, 255);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+}
+
+/* Shift the handle to left on check event */
+.book-card > input[type="checkbox"]:checked:before {
+  left: 32px;
+  box-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6);
+}
+/* Background color when toggle button will be active */
+.book-card > input[type="checkbox"]:checked:after {
+  background: rgb(221, 221, 221);
+}
